[package]
name = "hello-actix"
version = "0.1.0"
authors = ["Faust Fu <faust.fu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
futures = "0.3"
serde = "1"
serde_json = "1"
bytes = "0.5"